--- a/src/app/services/all-services/all-services.component.html
+++ b/src/app/services/all-services/all-services.component.html
@@ -28,21 +28,21 @@
                         <div class="service-item-wrapper">
                             <div class="row">
 
-                                <div class="col-lg-4 col-md-6 col-12 section-space--bottom--30">
+                                <div class="col-lg-4 col-md-6 col-12 section-space--bottom--30" *ngFor="let zzz of  allServices">
                                     <div class="service-grid-item">
                                         <div class="service-grid-item__image">
                                             <div class="service-grid-item__image-wrapper">
                                                 <a >
-                                                    <img width="370" height="237" src="assets/img/service/service1.webp" class="img-fluid" alt="">
+                                                    <img width="370" height="237" [src]="zzz?.mainPicture" class="img-fluid" alt="">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="service-grid-item__content">
                                             <h3 class="title">
-                                                <a >Land Minning</a>
+                                                <a >{{zzz?.title}}</a>
                                             </h3>
-                                            <p class="subtitle">Lorem ipsum dolor sit amet consect adipisi elit sed do eiusm tempor</p>
-                                            <a routerLink="/singleServices" class="see-more-link">SEE MORE</a>
+                                            <p class="subtitle">{{zzz?.description}}</p>
+                                            <a [routerLink]="['/singleServices',zzz?._id]" class="see-more-link">SEE MORE</a>
                                         </div>
                                     </div>
                                 </div>
