--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -62,7 +62,7 @@
                   <a class="nav-link" routerLink="/allServices">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/allProjects">Projects</a>
+                  <a class="nav-link" routerLink="/allProjectsng">Projects</a>
                 </li>
                 <!-- <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
