--- a/src/app/services/single-services/single-services.component.html
+++ b/src/app/services/single-services/single-services.component.html
@@ -1,4 +1,4 @@
-
+<ngx-spinner></ngx-spinner>
     <!--====================  breadcrumb area ====================-->
     <div class="breadcrumb-area bg-img" [style.backgroundImage]="'url(../assets/img/backgrounds/funfact-bg.webp)'">
         <div class="container">
@@ -34,46 +34,28 @@
                                     <div class="swiper-wrapper service-gallery__wrapper">
                                         <div class="swiper-slide service-gallery__single-slide">
                                             <div class="item">
-                                                <img width="770" height="450" src="assets/img/service/service-details-1.webp" class="img-fluid" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide service-gallery__single-slide">
-                                            <div class="item">
-                                                <img width="770" height="450" src="assets/img/service/service-details-2.webp" class="img-fluid" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide service-gallery__single-slide">
-                                            <div class="item">
-                                                <img width="770" height="450" src="assets/img/service/service-details-3.webp" class="img-fluid" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide service-gallery__single-slide">
-                                            <div class="item">
-                                                <img width="770" height="450" src="assets/img/service/service-details-4.webp" class="img-fluid" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide service-gallery__single-slide">
-                                            <div class="item">
-                                                <img width="770" height="450" src="assets/img/service/service-details-5.webp" class="img-fluid" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide service-gallery__single-slide">
-                                            <div class="item">
-                                                <img width="770" height="450" src="assets/img/service/service-details-6.webp" class="img-fluid" alt="">
+                                              <carousel
+                                              [arrowsOutside]="false"
+                                              [dots]="true"
+                                              [height]="500"
+                                              [images]="singleService?.servicePictures"
+                                              [cellsToShow]="1"
+                                              [loop]="true"
+                                              [autoplay]="true"
+                                              [autoplayInterval]="3000"
+                                            ></carousel>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="ht-swiper-button-prev ht-swiper-button-prev-14 ht-swiper-button-nav"><i class="ion-ios-arrow-left"></i></div>
-                                <div class="ht-swiper-button-next ht-swiper-button-next-14 ht-swiper-button-nav"><i class="ion-ios-arrow-forward"></i></div>
-                            </div>
+                             </div>
 
                             <div class="content section-space--top--30">
                                 <div class="row" >
                                     <div class="col-12">
                                         <h2>{{singleService?.title}}</h2>
                                         <p>{{singleService?.description}}</p>
-                                        
+
                                     </div>
                                     <div class="col-lg-6 col-12 section-space--top--30">
                                         <h3>Project Analysis</h3>
@@ -105,26 +87,13 @@
                         <div class="sidebar">
                             <h3 class="sidebar-title">Services</h3>
 
-                            <ul class="sidebar-list">
-                                <li><a href="service-details.html"><i class="flaticon-015-cart"></i>Construction</a></li>
-                                <li><a href="service-details.html"><i class="flaticon-010-tank-1"></i>House Remodel</a></li>
-                                <li><a href="service-details.html"><i class="flaticon-002-welding"></i>Interior Design</a></li>
-                                <li><a href="service-details.html"><i class="flaticon-004-walkie-talkie"></i>Floors & Roofs</a></li>
-                                <li><a href="service-details.html"><i class="flaticon-042-monitor"></i>Plumbing</a></li>
-                                <li><a href="service-details.html"><i class="flaticon-050-boxes"></i>Electricity</a></li>
+                            <ul class="sidebar-list" *ngFor="let ser of servicesList">
+                                <li><a [routerLink]="['/singleServices',ser?._id]"><i class="flaticon-015-cart"></i>{{ser?.serviceName}}</a></li>
                             </ul>
 
                         </div>
 
-                        <div class="sidebar">
-                            <h3 class="sidebar-title">Download brochure</h3>
 
-                            <ul class="sidebar-list">
-                                <li><a href="service-details.html"><i class="fa fa-file-pdf-o"></i>Brochures.PDF</a></li>
-                                <li><a href="service-details.html"><i class="fa fa-file-word-o"></i>Brochures.DOC</a></li>
-                            </ul>
-
-                        </div>
 
                     </div>
 
@@ -136,11 +105,10 @@
     </div>
 
     <!--====================  brand logo area ====================-->
-    <div class="brand-logo-slider-area grey-bg section-space--inner--60">
+    <!-- <div class="brand-logo-slider-area grey-bg section-space--inner--60">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <!-- brand logo slider -->
                     <div class="brand-logo-slider__container-area">
                         <div class="swiper-container brand-logo-slider__container">
                             <div class="swiper-wrapper brand-logo-slider__wrapper">
@@ -215,131 +183,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--====================  End of brand logo area  ====================-->
-   
-    <!--=======  offcanvas mobile menu  =======-->
 
-    <div class="offcanvas-mobile-menu" id="mobile-menu-overlay">
-        <a href="javascript:void(0)" class="offcanvas-menu-close" id="mobile-menu-close-trigger">
-            <i class="ion-android-close"></i>
-        </a>
-
-        <div class="offcanvas-wrapper">
-
-            <div class="offcanvas-inner-content">
-                <div class="offcanvas-mobile-search-area">
-                    <form action="#">
-                        <input type="search" placeholder="Search ...">
-                        <button type="submit"><i class="fa fa-search"></i></button>
-                    </form>
-                </div>
-                <nav class="offcanvas-navigation">
-                    <ul>
-                        <li class="menu-item-has-children">
-                            <a href="#">Home</a>
-                            <ul class="sub-menu">
-                                <li><a href="index.html">Homepage One</a></li>
-                                <li><a href="index-2.html">Homepage Two</a></li>
-                                <li><a href="index-3.html">Homepage Three</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="about.html">About</a></li>
-                        <li class="menu-item-has-children">
-                            <a href="service.html">Service</a>
-                            <ul class="sub-menu">
-                                <li><a href="service.html">Service Page</a></li>
-                                <li><a href="service-details.html">Service Details Left Sidebar</a></li>
-                                <li><a href="service-details-right-sidebar.html">Service Details Right Sidebar</a></li>
-                            </ul>
-                        </li>
-
-                        <li class="menu-item-has-children">
-                            <a href="javascript:void(0)">Project</a>
-                            <ul class="sub-menu">
-                                <li><a href="project.html">Project Page</a></li>
-                                <li><a href="project-details.html">Project Details</a></li>
-                                <li class="menu-item-has-children">
-                                    <a href="#">Submenu Level One</a>
-                                    <ul class="sub-menu">
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Submenu Level Two</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="#">Submenu Level Three</a></li>
-                                                <li><a href="#">Submenu Level Three</a></li>
-                                                <li><a href="#">Submenu Level Three</a></li>
-                                                <li><a href="#">Submenu Level Three</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">Submenu Level Two</a></li>
-                                        <li><a href="#">Submenu Level Two</a></li>
-                                        <li><a href="#">Submenu Level Two</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="#">Submenu Level One</a>
-                                    <ul class="sub-menu">
-                                        <li class="menu-item-has-children">
-                                            <a href="#">Submenu Level Two</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="#">Submenu Level Three</a></li>
-                                                <li><a href="#">Submenu Level Three</a></li>
-                                                <li><a href="#">Submenu Level Three</a></li>
-                                                <li><a href="#">Submenu Level Three</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">Submenu Level Two</a></li>
-                                        <li><a href="#">Submenu Level Two</a></li>
-                                        <li><a href="#">Submenu Level Two</a></li>
-                                    </ul>
-                                </li>
-
-                            </ul>
-                        </li>
-                        <li class="menu-item-has-children">
-                            <a href="javascript:void(0)">Blog</a>
-                            <ul class="sub-menu">
-                                <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                                <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                                <li><a href="blog-details-left-sidebar.html">Blog Details Left Sidebar</a></li>
-                                <li><a href="blog-details-right-sidebar.html">Blog Details Right Sidebar</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-
-
-
-                <div class="offcanvas-widget-area">
-                    <div class="off-canvas-contact-widget">
-                        <div class="header-contact-info">
-                            <ul class="header-contact-info__list">
-                                <li><i class="ion-android-phone-portrait"></i> <a href="tel://12452456012">(1245) 2456 012 </a></li>
-                                <li><i class="ion-android-mail"></i> <a href="mailto:info@yourdomain.com">info@yourdomain.com</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!--Off Canvas Widget Social Start-->
-                    <div class="off-canvas-widget-social">
-                        <a href="#" title="Facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="#" title="Twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" title="Youtube"><i class="fa fa-youtube-play"></i></a>
-                        <a href="#" title="Vimeo"><i class="fa fa-vimeo-square"></i></a>
-                    </div>
-                    <!--Off Canvas Widget Social End-->
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-    <!--=======  End of offcanvas mobile menu  =======-->
-    <!--====================  scroll top ====================-->
-    <a href="#" class="scroll-top" id="scroll-top">
-        <i class="ion-android-arrow-up"></i>
-    </a>
-    <!--====================  End of scroll top  ====================-->
-    <!-- JS
-============================================ -->
