--- a/src/app/component/about-us/about-us.component.html
+++ b/src/app/component/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-  
+
 <!--====================  breadcrumb area ====================-->
 <div class="breadcrumb-area bg-img"  [style.backgroundImage]="'url(../assets/img/backgrounds/funfact-bg.webp)'">
     <div class="container">
@@ -27,21 +27,17 @@
                 <div class="col-lg-6 col-12 mb-30">
                     <div class="about-image-two">
                         <img width="560" height="490" src="assets/img/about/about-3.webp" alt="">
-                        <span class="video-popup">
-                            <a href="https://www.youtube.com/watch?v=LTauBc7lDIg"><i
-                                    class="ion-ios-play-outline"></i></a>
-                        </span>
+
                     </div>
                 </div>
 
                 <div class="col-lg-6 col-12 mb-30">
                     <div class="about-content-two">
-                        <h3>Welcome to Constrk</h3>
-                        <h1>50 Years of Experience in Industry</h1>
-                        <h4>We are ready to build your dream home Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, beatae.</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam repudiandae odit dolorum quis laudantium impedit beatae perferendis natus, hic libero sed atque quibusdam possimus error, voluptate est molestiae doloremque necessitatibus
-                            illum rerum sunt! Ad sunt obcaecati voluptatem sint sequi quos, qui non deleniti a praesentium, sapiente accusantium odit.</p>
-                        <a href="service.html" class="ht-btn--default ht-btn--default--dark-hover section-space--top--20">Our
+                        <h3>Welcome to DS Projects Consult</h3>
+                        <h1>30 Years of Experience in Industry</h1>
+                        <h4>D S Projects Consult is a civil engineering construction and consultancy firm with an experience of twenty years dedicated to providing high-quality services to clients in various sectors. With a strong team of experienced engineers, architects, project managers, and consultants, we deliver comprehensive solutions for residential, commercial, mixed development and industrial projects of all scales.</h4>
+
+                        <a routerLink="/allServices" class="ht-btn--default ht-btn--default--dark-hover section-space--top--20">Our
                             Services</a>
                     </div>
                 </div>
@@ -62,8 +58,8 @@
                                     <img width="49" height="48" src="assets/img/icons/feature-1.webp" class="img-fluid" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Top Rated</h3>
-                                    <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit. Officia odio eum corporis consequatur.</p>
+                                    <h3>Structural Engineering</h3>
+                                    <p>Our structural engineering services encompass the design and analysis of buildings and other structures. We employ analysis tools and techniques to develop safe, efficient, and cost-effective structural solutions.</p>
                                 </div>
                             </div>
                         </div>
@@ -74,8 +70,8 @@
                                     <img width="50" height="50" src="assets/img/icons/feature-2.webp" class="img-fluid" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Best Quality</h3>
-                                    <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit. Officia odio eum corporis consequatur.</p>
+                                    <h3>Project Management</h3>
+                                    <p>We offer end-to-end project management services, ensuring seamless coordination between various stakeholders, managing timelines, budgets, and resources efficiently. Our dedicated project managers ensure successful project delivery from initiation to completion.</p>
                                 </div>
                             </div>
                         </div>
@@ -86,11 +82,34 @@
                                     <img width="47" height="47" src="assets/img/icons/feature-3.webp" class="img-fluid" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Low Cost</h3>
-                                    <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit. Officia odio eum corporis consequatur.</p>
+                                    <h3>Construction Supervision</h3>
+                                    <p>We provide comprehensive construction supervision services, overseeing every aspect of the construction process to ensure compliance with design specifications, quality standards, and safety regulations. Our onsite engineers monitor progress, manage subcontractors, and resolve any issues promptly.</p>
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-4 col-md-6 col-12 section-space--bottom--30">
+                          <div class="feature">
+                              <div class="icon">
+                                  <img width="49" height="48" src="assets/img/icons/feature-1.webp" class="img-fluid" alt="">
+                              </div>
+                              <div class="content">
+                                  <h3>Design and Planning</h3>
+                                  <p>Our team of architects, engineers, and designers collaborate to create innovative and sustainable designs for all the projects.</p>
+                              </div>
+                          </div>
+                      </div>
+
+                      <div class="col-lg-4 col-md-6 col-12 section-space--bottom--30">
+                          <div class="feature">
+                              <div class="icon">
+                                  <img width="50" height="50" src="assets/img/icons/feature-2.webp" class="img-fluid" alt="">
+                              </div>
+                              <div class="content">
+                                  <h3>Building Plan Approval</h3>
+                                  <p>As registered engineers in the BBMP, we offer clients, Building plan approval services and clearances to start construction activities at sites.</p>
+                              </div>
+                          </div>
+                      </div>
 
                     </div>
                 </div>
@@ -117,18 +136,16 @@
 
                 <div class="col-lg-6 col-12 order-3 order-lg-1">
                     <div class="about-content about-content-1">
-                        <h1><span>50</span>Years of Experience</h1>
-                        <p>ligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor ellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum atibus saepe eveniet ut et
-                            voluptates repudiandae sint et molestiae
-                        </p>
+                        <h1><span>30</span>Years of Experience</h1>
+                        <p>With a commitment to excellence, we work closely with our clients to understand their unique needs and provide customized solutions that meet their project goals and budget. Whether you are looking to plan and design, structural design, construct a new home, develop a property, renovate an existing property, or manage a construction project, our multi-role consultancy has the expertise to deliver results.
+                          At D S Projects Consult, we are passionate about engineering and are dedicated to staying at the forefront of our industry. Our focus on innovation and continuous improvement ensures that we are always evolving and providing the best possible services to our clients. Our multidisciplinary approach allows us to provide comprehensive services across all stages of a project, from concept development and planning to design, construction, and post-construction management. We work closely with clients, stakeholders, and communities to ensure that our projects meet their needs and contribute positively to society.</p>
                     </div>
                 </div>
 
                 <div class="col-lg-6 col-12 order-4">
                     <div class="about-content about-content-2">
-                        <p>ligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor ellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum atibus saepe eveniet ut et
-                            voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapie</p>
-                        <a href="contact.html" class="ht-btn--default ht-btn--default--dark-hover section-space--top--20">Contact
+                        <p>We offer end-to-end project management services, ensuring seamless coordination between various stakeholders, managing timelines, budgets, and resources efficiently. Our dedicated project managers ensure successful project delivery from initiation to completion.</p>
+                        <a href="tel:+91 994 593 3331" class="ht-btn--default ht-btn--default--dark-hover section-space--top--20">Contact
                             us</a>
                     </div>
                 </div>
@@ -281,7 +298,7 @@
     </div>
     <!--====================  End of team member area  ====================-->
     <!--====================  testimonial slider area ====================-->
-    <div class="testimonial-slider-area testimonial-slider-area-bg section-space--inner--120 bg-img"  [style.backgroundImage]="'url(../assets/img/backgrounds/testimonial.webp)'">
+    <!-- <div class="testimonial-slider-area testimonial-slider-area-bg section-space--inner--120 bg-img"  [style.backgroundImage]="'url(../assets/img/backgrounds/testimonial.webp)'">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 m-auto">
@@ -339,14 +356,13 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--====================  End of testimonial slider area  ====================-->
     <!--====================  brand logo area ====================-->
-    <div class="brand-logo-slider-area section-space--inner--60">
+    <!-- <div class="brand-logo-slider-area section-space--inner--60">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <!-- brand logo slider -->
                     <div class="brand-logo-slider__container-area">
                         <div class="swiper-container brand-logo-slider__container">
                             <div class="swiper-wrapper brand-logo-slider__wrapper">
@@ -421,134 +437,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--====================  End of brand logo area  ====================-->
 
 </div>
 
-<!--=======  offcanvas mobile menu  =======-->
 
-<div class="offcanvas-mobile-menu" id="mobile-menu-overlay">
-    <a href="javascript:void(0)" class="offcanvas-menu-close" id="mobile-menu-close-trigger">
-        <i class="ion-android-close"></i>
-    </a>
-
-    <div class="offcanvas-wrapper">
-
-        <div class="offcanvas-inner-content">
-            <div class="offcanvas-mobile-search-area">
-                <form action="#">
-                    <input type="search" placeholder="Search ...">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                </form>
-            </div>
-            <nav class="offcanvas-navigation">
-                <ul>
-                    <li class="menu-item-has-children">
-                        <a href="#">Home</a>
-                        <ul class="sub-menu">
-                            <li><a href="index.html">Homepage One</a></li>
-                            <li><a href="index-2.html">Homepage Two</a></li>
-                            <li><a href="index-3.html">Homepage Three</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="about.html">About</a></li>
-                    <li class="menu-item-has-children">
-                        <a href="service.html">Service</a>
-                        <ul class="sub-menu">
-                            <li><a href="service.html">Service Page</a></li>
-                            <li><a href="service-details.html">Service Details Left Sidebar</a></li>
-                            <li><a href="service-details-right-sidebar.html">Service Details Right Sidebar</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="menu-item-has-children">
-                        <a href="javascript:void(0)">Project</a>
-                        <ul class="sub-menu">
-                            <li><a href="project.html">Project Page</a></li>
-                            <li><a href="project-details.html">Project Details</a></li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Submenu Level One</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Submenu Level Two</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Submenu Level One</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Submenu Level Two</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                </ul>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="javascript:void(0)">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                            <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                            <li><a href="blog-details-left-sidebar.html">Blog Details Left Sidebar</a></li>
-                            <li><a href="blog-details-right-sidebar.html">Blog Details Right Sidebar</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-
-
-
-            <div class="offcanvas-widget-area">
-                <div class="off-canvas-contact-widget">
-                    <div class="header-contact-info">
-                        <ul class="header-contact-info__list">
-                            <li><i class="ion-android-phone-portrait"></i> <a href="tel://12452456012">(1245) 2456
-                                    012 </a></li>
-                            <li><i class="ion-android-mail"></i> <a href="mailto:info@yourdomain.com">info@yourdomain.com</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--Off Canvas Widget Social Start-->
-                <div class="off-canvas-widget-social">
-                    <a href="#" title="Facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" title="Twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
-                    <a href="#" title="Youtube"><i class="fa fa-youtube-play"></i></a>
-                    <a href="#" title="Vimeo"><i class="fa fa-vimeo-square"></i></a>
-                </div>
-                <!--Off Canvas Widget Social End-->
-            </div>
-        </div>
-    </div>
-
-</div>
-
-<!--=======  End of offcanvas mobile menu  =======-->
-<!--====================  scroll top ====================-->
-<a href="#" class="scroll-top" id="scroll-top">
-    <i class="ion-android-arrow-up"></i>
-</a>
-<!--====================  End of scroll top  ====================-->
-<!-- JS
-============================================ -->
