--- a/src/app/component/contact-us/contact-us.component.html
+++ b/src/app/component/contact-us/contact-us.component.html
@@ -25,7 +25,9 @@
 
             <div class="row section-space--bottom--50">
                 <div class="col">
-                    <div id="contact-map" class="contact-map"></div>
+                    <!-- <div id="contact-map" class="contact-map"> -->
+                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.732600273021!2d77.48338956983658!3d12.924900288048661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3edc7c07c56f%3A0x9df83dcddcf9e5cd!2s2nd%2C%201423%2C%2011th%20Cross%20Rd%2C%20Gnanabharathi%2C%20Stage%20II%2C%20Kengeri%20Satellite%20Town%2C%20Bengaluru%2C%20Karnataka%20560060!5e0!3m2!1sen!2sin!4v1686570526656!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <!-- </div> -->
                 </div>
             </div>
 
@@ -35,16 +37,18 @@
                         <h3>Contact Information</h3>
                         <ul>
                             <li>
-                                <span class="icon"><i class="ion-android-map"></i></span>
-                                <span class="text"><span>Stock Building, 125 Main Street 1st Lane, San Francisco, USA</span></span>
+                                <span class="icon"><i class="fa-solid fa-location-dot"></i></span>
+                                <span class="text"><span>No. 1423, 11th Cross,
+                                  K. S. Town,
+                                  Bengaluru – 560060</span></span>
                             </li>
                             <li>
-                                <span class="icon"><i class="ion-ios-telephone-outline"></i></span>
-                                <span class="text"><a href="#">(001) 24568 365 987)</a><a href="#">(001) 65897 569 784)</a></span>
+                                <span class="icon"><i class="fa-sharp fa-solid fa-phone-volume"></i></span>
+                                <span class="text"><a href="tel:+91 994 593 3331">+91 994 593 3331</a><a href="tel:+91 910 862 4424">+91 910 862 4424</a></span>
                             </li>
                             <li>
-                                <span class="icon"><i class="ion-ios-email-outline"></i></span>
-                                <span class="text"><a href="#">infor@example.com</a><a href="#">www.example.com</a></span>
+                                <span class="icon"><i class="fa-solid fa-globe"></i></span>
+                                <span class="text"><a href="mailto:dsprojectsconsult@gmail.com">dsprojectsconsult@gmail.com</a><a href="https://www.dsprocon.in">www.dsprocon.in</a></span>
                             </li>
                         </ul>
                     </div>
@@ -70,11 +74,10 @@
     <!--Contact section end-->
 </div>
 <!--====================  brand logo area ====================-->
-<div class="brand-logo-slider-area grey-bg section-space--inner--60">
+<!-- <div class="brand-logo-slider-area grey-bg section-space--inner--60">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <!-- brand logo slider -->
                 <div class="brand-logo-slider__container-area">
                     <div class="swiper-container brand-logo-slider__container">
                         <div class="swiper-wrapper brand-logo-slider__wrapper">
@@ -149,132 +152,8 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!--====================  End of brand logo area  ====================-->
 
-<!--=======  offcanvas mobile menu  =======-->
 
-<div class="offcanvas-mobile-menu" id="mobile-menu-overlay">
-    <a href="javascript:void(0)" class="offcanvas-menu-close" id="mobile-menu-close-trigger">
-        <i class="ion-android-close"></i>
-    </a>
-
-    <div class="offcanvas-wrapper">
-
-        <div class="offcanvas-inner-content">
-            <div class="offcanvas-mobile-search-area">
-                <form action="#">
-                    <input type="search" placeholder="Search ...">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                </form>
-            </div>
-            <nav class="offcanvas-navigation">
-                <ul>
-                    <li class="menu-item-has-children">
-                        <a href="#">Home</a>
-                        <ul class="sub-menu">
-                            <li><a href="index.html">Homepage One</a></li>
-                            <li><a href="index-2.html">Homepage Two</a></li>
-                            <li><a href="index-3.html">Homepage Three</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="about.html">About</a></li>
-                    <li class="menu-item-has-children">
-                        <a href="service.html">Service</a>
-                        <ul class="sub-menu">
-                            <li><a href="service.html">Service Page</a></li>
-                            <li><a href="service-details.html">Service Details Left Sidebar</a></li>
-                            <li><a href="service-details-right-sidebar.html">Service Details Right Sidebar</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="menu-item-has-children">
-                        <a href="javascript:void(0)">Project</a>
-                        <ul class="sub-menu">
-                            <li><a href="project.html">Project Page</a></li>
-                            <li><a href="project-details.html">Project Details</a></li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Submenu Level One</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Submenu Level Two</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Submenu Level One</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Submenu Level Two</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                </ul>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="javascript:void(0)">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                            <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                            <li><a href="blog-details-left-sidebar.html">Blog Details Left Sidebar</a></li>
-                            <li><a href="blog-details-right-sidebar.html">Blog Details Right Sidebar</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-
-
-
-            <div class="offcanvas-widget-area">
-                <div class="off-canvas-contact-widget">
-                    <div class="header-contact-info">
-                        <ul class="header-contact-info__list">
-                            <li><i class="ion-android-phone-portrait"></i> <a href="tel://12452456012">(1245) 2456 012 </a></li>
-                            <li><i class="ion-android-mail"></i> <a href="mailto:info@yourdomain.com">info@yourdomain.com</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--Off Canvas Widget Social Start-->
-                <div class="off-canvas-widget-social">
-                    <a href="#" title="Facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" title="Twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
-                    <a href="#" title="Youtube"><i class="fa fa-youtube-play"></i></a>
-                    <a href="#" title="Vimeo"><i class="fa fa-vimeo-square"></i></a>
-                </div>
-                <!--Off Canvas Widget Social End-->
-            </div>
-        </div>
-    </div>
-
-</div>
-
-<!--=======  End of offcanvas mobile menu  =======-->
-<!--====================  scroll top ====================-->
-<a href="#" class="scroll-top" id="scroll-top">
-    <i class="ion-android-arrow-up"></i>
-</a>
-<!--====================  End of scroll top  ====================-->
-<!-- JS
-============================================ -->
 
