--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -14,7 +14,7 @@
                                     </a>
                                 </div>
                                 <div class="footer-desc">
-                                    Lorem ipsum dolor sit amet consect adipisici elit, sed do eiusmod tempor incididuk ut labore et dolore magna aliqua Ut enim
+                                  D S Projects Consult is a civil engineering construction and consultancy firm with an experience of twenty years dedicated to providing high-quality services to clients in various sectors.
                                 </div>
 
                             </div>
@@ -24,16 +24,16 @@
                             <div class="footer-widget">
                                 <h4 class="footer-widget__title">USEFUL LINKS</h4>
                                 <ul class="footer-widget__navigation">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Company News</a></li>
-                                    <li><a href="#">Projects</a></li>
-                                    <li><a href="#">Careers</a></li>
-                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a routerLink="/home">Home</a></li>
+                                    <li><a routerLink="/allServices">Services</a></li>
+                                    <li><a routerLink="/allProjects">Projects</a></li>
+                                    <li><a routerLink="/about">Abou Ust</a></li>
+                                    <li><a routerLink="/contact">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xl-2 offset-xl-1 col-lg-3 col-md-4">
-                            <!-- footer widget -->
+                        <!-- <div class="col-xl-2 offset-xl-1 col-lg-3 col-md-4">
+
                             <div class="footer-widget">
                                 <h4 class="footer-widget__title">USEFUL LINKS</h4>
                                 <ul class="footer-widget__navigation">
@@ -44,17 +44,17 @@
                                     <li><a href="#">Privacy Policy</a></li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-xl-2 offset-xl-1 col-lg-3 col-md-4">
                             <!-- footer widget -->
                             <div class="footer-widget mb-0">
                                 <h4 class="footer-widget__title">CONTACT US</h4>
                                 <div class="footer-widget__content">
-                                    <p class="address">Your address goes here, street Crossroad123.</p>
+                                    <p class="address">No.1423, 11th Cross, 2nd Stage, Kengeri Satellite Town, Bengaluru - 560060</p>
                                     <ul class="contact-details">
-                                        <li><span>P:</span>99 55 66 88 526</li>
-                                        <li><span>F:</span>55 44 77 62</li>
-                                        <li><span>E:</span>cons@email.com</li>
+                                        <li><span>P:</span>+91 994 593 3331</li>
+                                        <li><span>F:</span>+91 910 862 4424</li>
+                                        <li><span>E:</span>dsprojectsconsult@gmail.com</li>
                                     </ul>
                                 </div>
                             </div>
@@ -66,7 +66,7 @@
     </div>
     <div class="footer-copyright-wrapper">
         <div class="footer-copyright text-center">
-            <p class="copyright-text">&copy; Constrk 2021 Made with <i class="fa fa-heart text-danger"></i> by HasThemes</p>
+            <p class="copyright-text">&copy; Constrk 2023 Made with <i class="fa fa-heart text-danger"></i> by Syntaxis Technologies</p>
         </div>
     </div>
 </div>
