--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -31,7 +31,7 @@
                       <span class="hideInPhone"
                         ><i class="fa-sharp fa-solid fa-phone-arrow-up-right"></i
                         ><small
-                          ><a href="tel:+91 1234567890">+91 1234567890</a></small
+                          ><a href="tel:+91 910 862 4424">+91 910 862 4424</a></small
                         ></span
                       >
                     </div>
@@ -45,7 +45,8 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img width="178" height="39" src="../assets/img/logo/logo.png" class="img-fluid" alt="">
+              <!-- <img width="178" height="39" src="../assets/img/logo/logo.png" class="img-fluid" alt=""> -->
+              <img width="178" height="39" src="../assets/img/logo/logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -55,14 +56,15 @@
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/contact">Contact Us</a>
-                </li>
+
                 <li class="nav-item">
                   <a class="nav-link" routerLink="/allServices">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" routerLink="/allProjectsng">Projects</a>
+                  <a class="nav-link" routerLink="/allProjects">Projects</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/contact">Contact Us</a>
                 </li>
                 <!-- <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
