--- a/src/app/projects/all-projects/all-projects.component.html
+++ b/src/app/projects/all-projects/all-projects.component.html
@@ -1,4 +1,4 @@
-
+<ngx-spinner></ngx-spinner>
 <!--====================  breadcrumb area ====================-->
 <div class="breadcrumb-area bg-img" [style.backgroundImage]="'url(../assets/img/backgrounds/funfact-bg.webp)'">
     <div class="container">
@@ -27,22 +27,22 @@
                     <div class="project-item-wrapper">
                         <div class="row">
 
-                            <div class="col-lg-4 col-sm-6 col-12 section-space--bottom--30">
+                            <div class="col-lg-4 col-sm-6 col-12 section-space--bottom--30" *ngFor="let zzz of  allProjects">
                                 <div class="service-grid-item service-grid-item--style2">
                                     <div class="service-grid-item__image">
                                         <div class="service-grid-item__image-wrapper">
                                             <a href="project-details.html">
-                                                <img width="370" height="237" src="assets/img/projects/project-1.webp" class="img-fluid" alt="">
+                                                <img width="370" height="237"  [src]="zzz?.mainPicture" class="img-fluid" alt="">
                                             </a>
                                         </div>
 
                                     </div>
                                     <div class="service-grid-item__content">
                                         <h3 class="title">
-                                            <a href="project-details.html">Land Minning</a>
+                                            <a href="project-details.html">{{zzz?.title}}</a>
                                         </h3>
-                                        <p class="subtitle">Lorem ipsum dolor sit amet consect adipisi elit sed do eiusm tempor</p>
-                                        <a routerLink="/singleProjects" class="see-more-link">SEE MORE</a>
+                                        <p class="subtitle">{{zzz?.description}}</p>
+                                        <a [routerLink]="['/singleProjects',zzz?._id]" class="see-more-link">SEE MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -52,228 +52,15 @@
                 </div>
             </div>
 
-            <div class="row section-space--top--60">
-                <div class="col">
-                    <ul class="page-pagination">
-                        <li><a href="#"><i class="fa fa-angle-left"></i> Prev</a></li>
-                        <li class="active"><a href="#">01</a></li>
-                        <li><a href="#">02</a></li>
-                        <li><a href="#">03</a></li>
-                        <li><a href="#"><i class="fa fa-angle-right"></i> Next</a></li>
-                    </ul>
-                </div>
-            </div>
+
 
         </div>
     </div>
     <!--Projects section end-->
 </div>
-<!--====================  brand logo area ====================-->
-<div class="brand-logo-slider-area grey-bg section-space--inner--60">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <!-- brand logo slider -->
-                <div class="brand-logo-slider__container-area">
-                    <div class="swiper-container brand-logo-slider__container">
-                        <div class="swiper-wrapper brand-logo-slider__wrapper">
-                            <div class="swiper-slide brand-logo-slider__single">
-                                <div class="image">
-                                    <a href="#">
-                                        <img width="152" height="51" src="assets/img/brand-logo/1.webp" class="img-fluid" alt="">
-                                    </a>
-                                </div>
 
-                            </div>
-                            <div class="swiper-slide brand-logo-slider__single">
-                                <div class="image">
-                                    <a href="#">
-                                        <img width="199" height="51" src="assets/img/brand-logo/2.webp" class="img-fluid" alt="">
-                                    </a>
-                                </div>
-
-                            </div>
-                            <div class="swiper-slide brand-logo-slider__single">
-                                <div class="image">
-                                    <a href="#">
-                                        <img width="217" height="51" src="assets/img/brand-logo/3.webp" class="img-fluid" alt="">
-                                    </a>
-                                </div>
-
-                            </div>
-                            <div class="swiper-slide brand-logo-slider__single">
-                                <div class="image">
-                                    <a href="#">
-                                        <img width="225" height="51" src="assets/img/brand-logo/4.webp" class="img-fluid" alt="">
-                                    </a>
-                                </div>
-
-                            </div>
-                            <div class="swiper-slide brand-logo-slider__single">
-                                <div class="image">
-                                    <a href="#">
-                                        <img width="152" height="51" src="assets/img/brand-logo/1.webp" class="img-fluid" alt="">
-                                    </a>
-                                </div>
-
-                            </div>
-                            <div class="swiper-slide brand-logo-slider__single">
-                                <div class="image">
-                                    <a href="#">
-                                        <img width="199" height="51" src="assets/img/brand-logo/2.webp" class="img-fluid" alt="">
-                                    </a>
-                                </div>
-
-                            </div>
-                            <div class="swiper-slide brand-logo-slider__single">
-                                <div class="image">
-                                    <a href="#">
-                                        <img width="217" height="51" src="assets/img/brand-logo/3.webp" class="img-fluid" alt="">
-                                    </a>
-                                </div>
-
-                            </div>
-                            <div class="swiper-slide brand-logo-slider__single">
-                                <div class="image">
-                                    <a href="#">
-                                        <img width="225" height="51" src="assets/img/brand-logo/4.webp" class="img-fluid" alt="">
-                                    </a>
-                                </div>
-
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!--====================  End of brand logo area  ====================-->
 
 <!--=======  offcanvas mobile menu  =======-->
 
-<div class="offcanvas-mobile-menu" id="mobile-menu-overlay">
-    <a href="javascript:void(0)" class="offcanvas-menu-close" id="mobile-menu-close-trigger">
-        <i class="ion-android-close"></i>
-    </a>
 
-    <div class="offcanvas-wrapper">
-
-        <div class="offcanvas-inner-content">
-            <div class="offcanvas-mobile-search-area">
-                <form action="#">
-                    <input type="search" placeholder="Search ...">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                </form>
-            </div>
-            <nav class="offcanvas-navigation">
-                <ul>
-                    <li class="menu-item-has-children">
-                        <a href="#">Home</a>
-                        <ul class="sub-menu">
-                            <li><a href="index.html">Homepage One</a></li>
-                            <li><a href="index-2.html">Homepage Two</a></li>
-                            <li><a href="index-3.html">Homepage Three</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="about.html">About</a></li>
-                    <li class="menu-item-has-children">
-                        <a href="service.html">Service</a>
-                        <ul class="sub-menu">
-                            <li><a href="service.html">Service Page</a></li>
-                            <li><a href="service-details.html">Service Details Left Sidebar</a></li>
-                            <li><a href="service-details-right-sidebar.html">Service Details Right Sidebar</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="menu-item-has-children">
-                        <a href="javascript:void(0)">Project</a>
-                        <ul class="sub-menu">
-                            <li><a href="project.html">Project Page</a></li>
-                            <li><a href="project-details.html">Project Details</a></li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Submenu Level One</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Submenu Level Two</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Submenu Level One</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Submenu Level Two</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                            <li><a href="#">Submenu Level Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                    <li><a href="#">Submenu Level Two</a></li>
-                                </ul>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="javascript:void(0)">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                            <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                            <li><a href="blog-details-left-sidebar.html">Blog Details Left Sidebar</a></li>
-                            <li><a href="blog-details-right-sidebar.html">Blog Details Right Sidebar</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-
-
-
-            <div class="offcanvas-widget-area">
-                <div class="off-canvas-contact-widget">
-                    <div class="header-contact-info">
-                        <ul class="header-contact-info__list">
-                            <li><i class="ion-android-phone-portrait"></i> <a href="tel://12452456012">(1245) 2456 012 </a></li>
-                            <li><i class="ion-android-mail"></i> <a href="mailto:info@yourdomain.com">info@yourdomain.com</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--Off Canvas Widget Social Start-->
-                <div class="off-canvas-widget-social">
-                    <a href="#" title="Facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" title="Twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
-                    <a href="#" title="Youtube"><i class="fa fa-youtube-play"></i></a>
-                    <a href="#" title="Vimeo"><i class="fa fa-vimeo-square"></i></a>
-                </div>
-                <!--Off Canvas Widget Social End-->
-            </div>
-        </div>
-    </div>
-
-</div>
-
-<!--=======  End of offcanvas mobile menu  =======-->
-<!--====================  scroll top ====================-->
-<a href="#" class="scroll-top" id="scroll-top">
-    <i class="ion-android-arrow-up"></i>
-</a>
-<!--====================  End of scroll top  ====================-->
-<!-- JS
-============================================ -->
 
